# trainvox

./: .gitignore  LICENSE  README.md  pyproject.toml
src/trainvox/: __init__.py  _version.py  strategies.py  utils.py
src/verbosity_strategy/: __init__.py  _version.py  strategies.py
