[project]
name = "trainvox"
version = "0.1.0"
description = "Provide strategies to display progress during machine learning training/evaluation loops."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Francesco Marchisotti", email = "francesco.marchisotti@gmail.com" },
]
requires-python = ">=3.10"
dependencies = ["requests>=2.32.5", "tqdm>=4.67.1"]

[dependency-groups]
dev = ["python-dotenv>=1.2.1"]

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"
